--- a/index.html
+++ b/index.html
@@ -96,10 +96,14 @@
   <div id="adminScreen" class="screen active">
     <div class="admin-panel">
       <h2>⚙️ 設定</h2>
-      <textarea id="itemsInput">特賞,1
-当たり,5
-残念,10
-残念,10</textarea>
+      <textarea id="itemsInput">アマギフ①,1/5000
+アマギフ②,1.5/5000
+残念,4998/5000
+残念,4998/5000
+残念,4998/5000
+残念,4998/5000
+残念,4998/5000
+残念,4998/5000</textarea>
       <button class="btn btn-primary" onclick="start()">ルーレット開始</button>
     </div>
   </div>
